2d4d8b8 chore(translations): sync translations from transifex (v29)

--- a/i18n/i18n_app_es.properties
+++ b/i18n/i18n_app_es.properties
@@ -1,26 +1,26 @@
 about=Acerca de
-add_legend=Añadir leyenda
+add_legend=A\u00f1adir leyenda
 add_new=Agregar nuevo
-address=Dirección
-add_to_dashboard=Añadir al tablero
-aggregation_type=Tipo de agregación
+address=Direcci\u00f3n
+add_to_dashboard=A\u00f1adir al tablero
+aggregation_type=Tipo de agregaci\u00f3n
 allow_external_access=Permitir acceso externo
 and_or_lower_than=Y/o menor que
 attribution=Atribucio\u0301n
-automatic=Automático
+automatic=Autom\u00e1tico
 average=Promedio
 bimonthly=Bimestral
-boundary_layer=Capa de límites
+boundary_layer=Capa de l\u00edmites
 by_data_element=Por elemento de datos
 cancel=Cancelar
 can_edit_and_view=Puede editar y ver
 can_view=Puede ver
 chart=Grafico
-classes_method=Clases / método
+classes_method=Clases / m\u00e9todo
 clear=Limpiar
 clear_map=Borrar mapa
 clustering=Clustering
-code=Código
+code=C\u00f3digo
 color_scale=Escala de color
 coordinate_field=Coordinate field
 coordinates=Coordenadas
@@ -31,7 +31,7 @@ created_by=Creado por
 current_legends=Leyendas actuales
 daily=Diario
 data=Datos
-data_and_periods=Datos y períodos
+data_and_periods=Datos y per\u00edodos
 dataelement=Elemento de datos
 dataelement_group=Grupo de elemento de datos
 dataset=Set de Datos
@@ -50,7 +50,7 @@ edit_layer=Editar capa
 edit_legend=Editar leyenda
 email=Correo-e
 end_date=Fecha final
-end_value_should_be_bigger_than_start_value=El valor de finalización debe ser mayor que el valor de comienzo
+end_value_should_be_bigger_than_start_value=El valor de finalizaci\u00f3n debe ser mayor que el valor de comienzo
 equal_counts=Cuentas iguales
 equal_intervals=Intervalos iguales
 event_data_item=Event data item
@@ -61,55 +61,55 @@ event_time=Event time
 external_layer=Capa externa
 external_layer_legend=Leyenda de capa externa
 facility_layer=Capa de establecimiento
-facility_layer_export_currently_not_supported=Exportar la capa de establecimientos no está soportado actualmente
+facility_layer_export_currently_not_supported=Exportar la capa de establecimientos no est\u00e1 soportado actualmente
 facility_layer_legend=Leyenda de capa de establecimientos
 favorite_name=Nombre favorito
-favorite_outdated_create_new=El favorito está obsoleto - por favor, cree uno nuevo
+favorite_outdated_create_new=El favorito est\u00e1 obsoleto - por favor, cree uno nuevo
 favorites=Favoritos
 filter=filtro
 filter_by_value=Filtrar por valor
-financial_april=Año fiscal - Abril
-financial_july=Año fiscal - Julio
-financial_oct=Año fiscal - Octubre
-google_hybrid=Google Híbrido
+financial_april=A\u00f1o fiscal - Abril
+financial_july=A\u00f1o fiscal - Julio
+financial_oct=A\u00f1o fiscal - Octubre
+google_hybrid=Google H\u00edbrido
 google_streets=Google Calles
-go_to_charts=Ir a gráficos
-go_to_pivot_tables=Ir a tablas dinámicas
+go_to_charts=Ir a gr\u00e1ficos
+go_to_pivot_tables=Ir a tablas din\u00e1micas
 greater_than=Mayor que
 group=Grupo
 group_nearby_events=Group nearby events
 groups=Grupos
 groupset=Set de grupos
 has_no_orgunits=no tiene unidades organizativas
-high_color_size=Color / tamaño máximo
+high_color_size=Color / tama\u00f1o m\u00e1ximo
 highlight_color=Color de realce
-high_size=Tamaño grande
+high_size=Tama\u00f1o grande
 home=Inicio
 indicator=Indicadores
 indicator_group=Grupo de indicadores
-information=Información
+information=Informaci\u00f3n
 infrastructural_data=Datos de infraestructura
-invalid_parameter=Parámetro no válido
+invalid_parameter=Par\u00e1metro no v\u00e1lido
 item_type=Item type
 landcover=Cubierta de tierra
-last_2_sixmonths=Últimos 2 semestres
-last_3_months=Últimos 3 meses
-last_4_quarters=Últimos 4 trimestres
-last_4_weeks=Últimas 4 semanas
-last_5_financial_years=Últimos 5 ejercicios financieros
-last_6_bimonths=Últimos 6 bimestres
-last_6_months=Últimos 6 meses
+last_2_sixmonths=\u00daltimos 2 semestres
+last_3_months=\u00daltimos 3 meses
+last_4_quarters=\u00daltimos 4 trimestres
+last_4_weeks=\u00daltimas 4 semanas
+last_5_financial_years=\u00daltimos 5 ejercicios financieros
+last_6_bimonths=\u00daltimos 6 bimestres
+last_6_months=\u00daltimos 6 meses
 last_12_months=Ultimos 12 meses
-last_12_weeks=Últimas 12 semanas
-last_52_weeks=Últimas 52 semanas
+last_12_weeks=\u00daltimas 12 semanas
+last_52_weeks=\u00daltimas 52 semanas
 last_bimonth=Bimestre anterior
-last_financial_year=Último ejercicio financiero
+last_financial_year=\u00daltimo ejercicio financiero
 last_month=Mes anterior
 last_quarter=El trimestre pasado
-last_sixmonth=Último semestre
-last_week=Última semana
-last_5_years=Últimos 5 años
-last_year=El año pasado
+last_sixmonth=\u00daltimo semestre
+last_week=\u00daltima semana
+last_5_years=\u00daltimos 5 a\u00f1os
+last_year=El a\u00f1o pasado
 latitude=Latitud
 layer=Capa
 layers=Capas
@@ -125,17 +125,17 @@ legend_symbolizer=Simbolizador
 legend_type=Tipo de leyenda
 level=Nivel
 longitude=Longitud
-low_color_size=Color / tamaño mínimo
-low_size=Tamaño pequeño
+low_color_size=Color / tama\u00f1o m\u00ednimo
+low_size=Tama\u00f1o peque\u00f1o
 manage_favorites=Administrar favoritos
 map=Mapa
-max=Máx
-min=Mín
-min_max_c=Min/max Â°C
-min_max_elevation=Min/max elevación
+max=M\u00e1x
+min=M\u00edn
+min_max_c=Min/max \u00c2\u00b0C
+min_max_elevation=Min/max elevaci\u00f3n
 min_max_people=Min/max personas
 min_max_rainfall=Min/max lluvia
-min_max_value=Min/Máx valor
+min_max_value=Min/M\u00e1x valor
 monthly=Mensual
 name=Nombre
 next=Siguiente
@@ -149,13 +149,13 @@ no_organisation_unit_levels=Sin niveles para la unidad organizativa
 no_organisation_units_specified=No se especificaron unidades organizativas
 no_period_selected=No hay periodo seleccionado
 no_program_stage_selected=Ninguna etapa del programa seleccionada
-no_selected_items=No hay ítem seleccionados
-no_system_info_found=No se encontró información del sistema
-no_valid_coordinates_found=No se han encontrado coordenadas válidas
-open_last_chart=Abrir último gráfico
-open_last_table=Abrir última tabla
+no_selected_items=No hay \u00edtem seleccionados
+no_system_info_found=No se encontr\u00f3 informaci\u00f3n del sistema
+no_valid_coordinates_found=No se han encontrado coordenadas v\u00e1lidas
+open_last_chart=Abrir \u00faltimo gr\u00e1fico
+open_last_table=Abrir \u00faltima tabla
 openstreetmap=Mapa abierto (OSM)
-open_this_map_as_chart=Abrir este mapa como una gráfica
+open_this_map_as_chart=Abrir este mapa como una gr\u00e1fica
 open_this_map_as_table=Abrir este mapa como una tabla
 options=Opciones
 organisation_unit=Unidad organizativa
@@ -166,24 +166,24 @@ organisationunit_search=Buscar unidad organizativa
 osm_light=OSM Sencillo
 overwrite=Sobrescribir
 overwrite_favorite=Sobrescribir favorito
-page=Página
+page=P\u00e1gina
 parent_unit=Unidad padre
 period=Periodo
 period_type=Tipo de periodo
-phone_number=Número de teléfono
-placement=Posición
+phone_number=N\u00famero de tel\u00e9fono
+placement=Posici\u00f3n
 please_create_map_first=Por favor, cree un mapa primero
 please_enter_a_name=Entrar un nombre
-please_enter_map_title=Por favor, introduzca el título del mapa
+please_enter_map_title=Por favor, introduzca el t\u00edtulo del mapa
 point_color=Point color
 point_radius=Point radius
-population_density=Densidad de población
-precipitation=Precipitación
+population_density=Densidad de poblaci\u00f3n
+precipitation=Precipitaci\u00f3n
 predefined=Predefinido
 previous=Anterior
 program=Programa
 program_indicators=Indicadores de programa
-public_access=Acceso público
+public_access=Acceso p\u00fablico
 quarterly=Trimestral
 relative=Relativo
 relocate=Reubicar
@@ -191,13 +191,13 @@ relocate_facility=Reubicar establecimiento
 remove=Eliminar
 rename=Renombrar
 reporting_rates=Tasas de Informes
-revision=Revisión
+revision=Revisi\u00f3n
 search=Buscar
 search_for_favorites=Buscar favoritos
 search_for_user_groups=Buscar grupos de usuarios
 select=Seleccionar
 select_groups=Seleccionar grupos
-selection_mode=Modo de selección
+selection_mode=Modo de selecci\u00f3n
 select_dataset=Seleccionar set de datos
 select_layer=Seleccionar capa
 select_layer_from_google_earth_engine=Seleccionar la capa de Google Earth Engine
@@ -210,14 +210,14 @@ select_program=Seleccionar programa
 select_service=Seleccionar servicio
 select_stage=Seleccionar fase
 select_sub_units=Seleccionar sub-unidades
-select_year=Seleccionar año
+select_year=Seleccionar a\u00f1o
 service_url=Servicio URL
 share=Compartir
 share_with_other_people=Compartir con otros
-sharing_settings=Configuración de uso compartido
+sharing_settings=Configuraci\u00f3n de uso compartido
 show=Mostrar
-show_circular_area=Mostrar área circular de radio (m)
-show_information_sheet=Mostrar hoja de información
+show_circular_area=Mostrar \u00e1rea circular de radio (m)
+show_information_sheet=Mostrar hoja de informaci\u00f3n
 show_lon_lat=Mostrar longitud/latitud
 sixmonthly=Semestral
 sixmonthly_april=Semestral Abril
@@ -225,7 +225,7 @@ stage=Fase
 start_date=Fecha inicial
 start_end_dates=Fechas de inicio y fin
 start_end_value=Valor Inicial/Final
-stddev=Desviación estándar
+stddev=Desviaci\u00f3n est\u00e1ndar
 steps=Pasos
 style=Estilo
 sub_units=Sub-unidades
@@ -236,24 +236,24 @@ symbol_layer=Capa de establecimiento
 table=Tabla
 temperature=Temperatura
 text_filter=Filtro de texto
-thematic_layer=Capa temática
-thematic_layer_1_legend=Leyenda de capa temática 1
-thematic_layer_2_legend=Leyenda de capa temática 2
-thematic_layer_3_legend=Leyenda de capa temática 3
-thematic_layer_4_legend=Leyenda de capa temática 4
+thematic_layer=Capa tem\u00e1tica
+thematic_layer_1_legend=Leyenda de capa tem\u00e1tica 1
+thematic_layer_2_legend=Leyenda de capa tem\u00e1tica 2
+thematic_layer_3_legend=Leyenda de capa tem\u00e1tica 3
+thematic_layer_4_legend=Leyenda de capa tem\u00e1tica 4
 this_bimonth=Este bimestre
-this_financial_year=Este año fiscal
+this_financial_year=Este a\u00f1o fiscal
 this_month=Este mes
 this_quarter=Este trimestre
 this_sixmonth=Este semestre
 this_week=Esta semana
-this_year=Este año
-time_since_last_data_update=Tiempo desde última actualización
+this_year=Este a\u00f1o
+time_since_last_data_update=Tiempo desde \u00faltima actualizaci\u00f3n
 today=Hoy
 totals=Totales
 update=Actualizar
 username=Nombre de usuario
-user_is_not_assigned_to_any_organisation_units=El usuario no está asignado a ninguna de las unidades organizativas
+user_is_not_assigned_to_any_organisation_units=El usuario no est\u00e1 asignado a ninguna de las unidades organizativas
 user_organisation_unit=Usuario de unidad organizativa
 user_ou=Usuario OU
 user_sub_units=Subunidades de usuario
@@ -261,14 +261,14 @@ user_sub_x2_units=Sub-unidades-x2 de usuario
 value=Valor
 value_type=Tipo de Valor
 variance=Varianza
-version=Versión
+version=Versi\u00f3n
 weekly=Semanal
 weekly_wednesday=Weekly (Start Wednesday)
 weekly_thursday=Weekly (Start Thursday)
 weekly_saturday=Weekly (Start Saturday)
 weekly_sunday=Weekly (Start Sunday)
-write_interpretation=Escribir interpretación
-write_your_interpretation=Escriba su intepretación
+write_interpretation=Escribir interpretaci\u00f3n
+write_your_interpretation=Escriba su intepretaci\u00f3n
 yearly=Anual
 yes=Si
 yesterday=Ayer
