--- a/i18n/i18n_app_pt.properties
+++ b/i18n/i18n_app_pt.properties
@@ -1,37 +1,37 @@
 about=Acerca
 add_legend=Adicionar legenda
 add_new=Novo
-address=Endereço
+address=Endere\u00e7o
 add_to_dashboard=Adicionar ao painel de instrumentos
-aggregation_type=Tipo de agregacão
+aggregation_type=Tipo de agregac\u00e3o
 allow_external_access=Permitir acesso externo
 and_or_lower_than=E/ou inferior a
-attribution=Atribuição
-automatic=Automático
-average=Média
+attribution=Atribui\u00e7\u00e3o
+automatic=Autom\u00e1tico
+average=M\u00e9dia
 bimonthly=Bimensal
 boundary_layer=Camada limite
 by_data_element=Por elemento de dado
 cancel=Cancelar
 can_edit_and_view=Consegue Editar e Visualizar
 can_view=Consegue ver
-chart=Gráfico
-classes_method=Classes / método
+chart=Gr\u00e1fico
+classes_method=Classes / m\u00e9todo
 clear=Limpar
 clear_map=Limpar mapa
 clustering=Clustering
-code=Código
+code=C\u00f3digo
 color_scale=Escala da cor
 coordinate_field=Coordinate field
 coordinates=Coordenadas
-coordinates_could_not_be_loaded=Não foi possível carregar as coordenadas
+coordinates_could_not_be_loaded=N\u00e3o foi poss\u00edvel carregar as coordenadas
 count=Contagem
 create=Criar
 created_by=Criado por
 current_legends=Legendas actuais
-daily=Diário
+daily=Di\u00e1rio
 data=Dados
-data_and_periods=Dados e períodos
+data_and_periods=Dados e per\u00edodos
 dataelement=Elemento de dado
 dataelement_group=Grupo de Elemento de Dados
 dataset=Ficha
@@ -44,8 +44,8 @@ drill_down_one_level=Perfurar um nivel
 drill_up_one_level=Perfurar um nivel
 duplicate=Duplicar
 earthengine_layer=Selecionar camada pelo Google Earth Engine
-earth_engine_layer_legend=Legenda da camada temática
-elevation=Elevação
+earth_engine_layer_legend=Legenda da camada tem\u00e1tica
+elevation=Eleva\u00e7\u00e3o
 edit_layer=Editar camadas
 edit_legend=Modificar legenda
 email=E-mail
@@ -61,10 +61,10 @@ event_time=Event time
 external_layer=Camada externa
 external_layer_legend=Legenda da camada externa
 facility_layer=Camada da US
-facility_layer_export_currently_not_supported=Exportação de Camada de US não é actualmente suportada
+facility_layer_export_currently_not_supported=Exporta\u00e7\u00e3o de Camada de US n\u00e3o \u00e9 actualmente suportada
 facility_layer_legend=Legenda da camada de US
 favorite_name=Nome do favorito
-favorite_outdated_create_new=Favorito está expirado - Por favor crie um novo
+favorite_outdated_create_new=Favorito est\u00e1 expirado - Por favor crie um novo
 favorites=Favoritos
 filter=Filtro
 filter_by_value=Filtrar por valor
@@ -73,93 +73,93 @@ financial_july=Ano Financeiro - Julho
 financial_oct=Ano Financeiro - Outubro
 google_hybrid=Google Hybrid
 google_streets=Google Streets
-go_to_charts=Ir para gráficos
-go_to_pivot_tables=Ir para tabelas dinâmicas
+go_to_charts=Ir para gr\u00e1ficos
+go_to_pivot_tables=Ir para tabelas din\u00e2micas
 greater_than=Melhor que
 group=Grupo
 group_nearby_events=Group nearby events
 groups=Grupos
 groupset=Conjunto do grupo
-has_no_orgunits=não tem unidades organizacional
+has_no_orgunits=n\u00e3o tem unidades organizacional
 high_color_size=Cor superior / tamanho
 highlight_color=Realce as cores
 high_size=Tamanho elevado
-home=Início
+home=In\u00edcio
 indicator=Indicador
 indicator_group=Grupo de Indicador
-information=Informação
+information=Informa\u00e7\u00e3o
 infrastructural_data=Dados de infra-estrutura
-invalid_parameter=Parâmetro inválido
+invalid_parameter=Par\u00e2metro inv\u00e1lido
 item_type=Item type
 landcover=Cobertura da terra
-last_2_sixmonths=Dois últimos seis-meses
-last_3_months=Últimos três meses
-last_4_quarters=Últimos quatro trimestres
-last_4_weeks=Últimas quatro semanas
-last_5_financial_years=Últimos cinco anos fiscais
-last_6_bimonths=Últimos seis bi-meses
-last_6_months=Últimos seis meses
-last_12_months=Últimos doze meses
-last_12_weeks=Últimas doze semanas
-last_52_weeks=Últimas 52 semanas
-last_bimonth=Último bimestre
-last_financial_year=Último ano fiscal
-last_month=Último mês
-last_quarter=Último trimestre
-last_sixmonth=Último semestre
-last_week=Última semana
-last_5_years=Últimos cinco anos
-last_year=Último ano
+last_2_sixmonths=Dois \u00faltimos seis-meses
+last_3_months=\u00daltimos tr\u00eas meses
+last_4_quarters=\u00daltimos quatro trimestres
+last_4_weeks=\u00daltimas quatro semanas
+last_5_financial_years=\u00daltimos cinco anos fiscais
+last_6_bimonths=\u00daltimos seis bi-meses
+last_6_months=\u00daltimos seis meses
+last_12_months=\u00daltimos doze meses
+last_12_weeks=\u00daltimas doze semanas
+last_52_weeks=\u00daltimas 52 semanas
+last_bimonth=\u00daltimo bimestre
+last_financial_year=\u00daltimo ano fiscal
+last_month=\u00daltimo m\u00eas
+last_quarter=\u00daltimo trimestre
+last_sixmonth=\u00daltimo semestre
+last_week=\u00daltima semana
+last_5_years=\u00daltimos cinco anos
+last_year=\u00daltimo ano
 latitude=Latitude
 layer=Camada
 layers=Camadas
-layer_stack_transparency=Camadas / transparência
+layer_stack_transparency=Camadas / transpar\u00eancia
 legend_name=Nome da legenda
-legend_name_is_required=O nome da legenda é obrigatório
+legend_name_is_required=O nome da legenda \u00e9 obrigat\u00f3rio
 legends=Legendas
 legendset=Conjunto da legenda
-legend_sets_available=Conjuntos de legendas disponíveis
+legend_sets_available=Conjuntos de legendas dispon\u00edveis
 legend_set_name=Nome da legenda
 legendsets=Conjunto de legendas
-legend_symbolizer=Símbolo da legenda
+legend_symbolizer=S\u00edmbolo da legenda
 legend_type=Tipo de legenda
-level=Nível
+level=N\u00edvel
 longitude=Longitude
 low_color_size=Cor Inferior / tamanho
 low_size=Tamanho reduzido
 manage_favorites=Gerir favoritos
 map=Mapa
-max=Máx
-min=Mínimo
-min_max_c=Min/max Â°C
-min_max_elevation=Min/max elevação
+max=M\u00e1x
+min=M\u00ednimo
+min_max_c=Min/max \u00c2\u00b0C
+min_max_elevation=Min/max eleva\u00e7\u00e3o
 min_max_people=Min/max pessoas
 min_max_rainfall=Min/max pluviosidade
 min_max_value=Min/max valor
 monthly=Mensal
 name=Nome
-next=Próximo
+next=Pr\u00f3ximo
 nighttime_lights=Luzes noturnas
-no=Não
+no=N\u00e3o
 no_groupset_selected=Nenhum conjunto de grupos seleccionado
 no_map_to_save=Nenhum mapa a gravar
 none=Nenhum
-no_event_coordinates_found=Não foram encontradas coordenadas de eventos
-no_organisation_unit_levels=Nenhum nível de unidade organizacional
+no_event_coordinates_found=N\u00e3o foram encontradas coordenadas de eventos
+no_organisation_unit_levels=Nenhum n\u00edvel de unidade organizacional
 no_organisation_units_specified=Nenhuma unidade organizacional especificada
-no_period_selected=Nenhum período seleccionado
+no_period_selected=Nenhum per\u00edodo seleccionado
 no_program_stage_selected=Nenhum estagio do programa selecionado
 no_selected_items=Nenhum item selecionado
-no_system_info_found=Nenhuma informação de sistema encontrada
-no_valid_coordinates_found=Nenhum corrdenada válida encontrada
-open_last_chart=Abrir ultimo gráfico
+no_system_info_found=Nenhuma informa\u00e7\u00e3o de sistema encontrada
+no_valid_coordinates_found=Nenhum corrdenada v\u00e1lida encontrada
+open_last_chart=Abrir ultimo gr\u00e1fico
 open_last_table=Abrir ultima tabela
 openstreetmap=OpenStreetMap
-open_this_map_as_chart=Abrir este mapa como gráfico
+open_this_map_as_chart=Abrir este mapa como gr\u00e1fico
 open_this_map_as_table=Abrir este mapa como tabela
-options=Opções
+options=Op\u00e7\u00f5es
 organisation_unit=Unidade organizacional
-organisation_unit_group_icons=Ícones do grupo da unidade organizacional
+organisation_unit_group_icons=\u00cdcones do grupo da unidade organizacional
 organisationunit_groupset=Conjunto de Grupo Unidade Organizacional
 organisation_units=Unidades organizacionais
 organisationunit_search=Busca de unidade organizacional
@@ -168,110 +168,110 @@ overwrite=Escrever por cima
 overwrite_favorite=Substituir favorito
 page=Pagina
 parent_unit=Unidade parental
-period=Período
+period=Per\u00edodo
 period_type=Tipo de periodo
-phone_number=Número de telefone
-placement=Colocação
+phone_number=N\u00famero de telefone
+placement=Coloca\u00e7\u00e3o
 please_create_map_first=Por favor crie um mapa primeiro
 please_enter_a_name=Por favor insira um nome
-please_enter_map_title=Digite um título do mapa
+please_enter_map_title=Digite um t\u00edtulo do mapa
 point_color=Point color
 point_radius=Point radius
 population_density=Densidade populacional
-precipitation=Precipitação
+precipitation=Precipita\u00e7\u00e3o
 predefined=Predefinido
 previous=Anterior
 program=Programa
 program_indicators=Indicador do programa
-public_access=Acesso público
+public_access=Acesso p\u00fablico
 quarterly=Trimestral
 relative=Relativo
 relocate=Realocar
-relocate_facility=Recolocar a instalação
+relocate_facility=Recolocar a instala\u00e7\u00e3o
 remove=Remover
 rename=Renomear
-reporting_rates=Taxas de relatórios
-revision=Revisão
+reporting_rates=Taxas de relat\u00f3rios
+revision=Revis\u00e3o
 search=Pesquisar
 search_for_favorites=Pesquisar por favoritos
 search_for_user_groups=Pesquisar por grupos de utilizadores
 select=Seleccione
 select_groups=Selecionar grupos
-selection_mode=Modo de seleção
+selection_mode=Modo de sele\u00e7\u00e3o
 select_dataset=Selecionar conjunto de dados
 select_layer=Selecionar camada
 select_layer_from_google_earth_engine=Selecionar camada pelo Google Earth Engine
-select_levels=Selecionar Nível
+select_levels=Selecionar N\u00edvel
 select_organisation_unit_groups=Seleccione grupos de unidades organizacionais
-select_organisation_unit_levels=Seleccione níveis de unidade organizacionais
+select_organisation_unit_levels=Seleccione n\u00edveis de unidade organizacionais
 select_organisation_units=Seleccione unidades organizacionais
-select_period=Seleccione o período
+select_period=Seleccione o per\u00edodo
 select_program=Selecionar o programa
-select_service=Selecionar serviço
+select_service=Selecionar servi\u00e7o
 select_stage=Selecionar estagio
 select_sub_units=Selecionar sub-units
 select_year=Selecionar ano
-service_url=Serviço de URL
+service_url=Servi\u00e7o de URL
 share=Partilha
 share_with_other_people=Compartilhar com os outros
-sharing_settings=Definições de partilha
+sharing_settings=Defini\u00e7\u00f5es de partilha
 show=Mostrar
-show_circular_area=Mostrar área circular com raio (m)
-show_information_sheet=Mostrar folha de informação
+show_circular_area=Mostrar \u00e1rea circular com raio (m)
+show_information_sheet=Mostrar folha de informa\u00e7\u00e3o
 show_lon_lat=Mostrar longitude/latitude
 sixmonthly=Semestral
 sixmonthly_april=Semestral a partir de Abril
 stage=Estagio
-start_date=Data Início
-start_end_dates=Inicio/datas de término
-start_end_value=Valor início / fim
-stddev=Desvio padrão
+start_date=Data In\u00edcio
+start_end_dates=Inicio/datas de t\u00e9rmino
+start_end_value=Valor in\u00edcio / fim
+stddev=Desvio padr\u00e3o
 steps=Passos
 style=Estilo
-sub_units=Um Nível abaixo
-sub_x2_units=Dois níveis abaixo
+sub_units=Um N\u00edvel abaixo
+sub_x2_units=Dois n\u00edveis abaixo
 sum=Soma
 swap_lon_lat=Trocar longitude/latitude
 symbol_layer=Camada da US
 table=Tabela
 temperature=Temperatura
 text_filter=Filtro do texto
-thematic_layer=Camada temática
-thematic_layer_1_legend=Legenda da camada temática #1
-thematic_layer_2_legend=Legenda da camada temática #2
-thematic_layer_3_legend=Legenda da camada temática #3
-thematic_layer_4_legend=Legenda da camada temática #4
-this_bimonth=Este bi-mês
+thematic_layer=Camada tem\u00e1tica
+thematic_layer_1_legend=Legenda da camada tem\u00e1tica #1
+thematic_layer_2_legend=Legenda da camada tem\u00e1tica #2
+thematic_layer_3_legend=Legenda da camada tem\u00e1tica #3
+thematic_layer_4_legend=Legenda da camada tem\u00e1tica #4
+this_bimonth=Este bi-m\u00eas
 this_financial_year=Ano financeiro
-this_month=Este mês
+this_month=Este m\u00eas
 this_quarter=Este Trimestre
 this_sixmonth=Estes seis meses
 this_week=Esta semana
 this_year=Este ano
-time_since_last_data_update=Tempo decorrido desde a ultima atualização de dados
+time_since_last_data_update=Tempo decorrido desde a ultima atualiza\u00e7\u00e3o de dados
 today=Hoje
 totals=Totais
 update=Actualizar
 username=Utilizador
-user_is_not_assigned_to_any_organisation_units=O utilizador não está atribuído a nenhuma unidade organizacional
+user_is_not_assigned_to_any_organisation_units=O utilizador n\u00e3o est\u00e1 atribu\u00eddo a nenhuma unidade organizacional
 user_organisation_unit=Unidade organizacional do utilizador
 user_ou=Utilizador ou
-user_sub_units=Dois níveis abaixo
-user_sub_x2_units=Dois níveis abaixo
+user_sub_units=Dois n\u00edveis abaixo
+user_sub_x2_units=Dois n\u00edveis abaixo
 value=Valor
 value_type=Tipo de valor
-variance=Variância
-version=Versão
+variance=Vari\u00e2ncia
+version=Vers\u00e3o
 weekly=Semanal
 weekly_wednesday=Weekly (Start Wednesday)
 weekly_thursday=Weekly (Start Thursday)
 weekly_saturday=Weekly (Start Saturday)
 weekly_sunday=Weekly (Start Sunday)
-write_interpretation=Escrever interpretação
-write_your_interpretation=Escreva a sua interpretação
+write_interpretation=Escrever interpreta\u00e7\u00e3o
+write_your_interpretation=Escreva a sua interpreta\u00e7\u00e3o
 yearly=Anualmente
 yes=Sim
-yesterday=Ontém
-you_can_not_select_organisation_units_below_the_selected_level=Não é possível selecionar unidades organizacionais abaixo do nível selecionado
-you_do_not_have_access_to_all_items_in_this_favorite=Você não tem acesso a todos os itens neste favorito
+yesterday=Ont\u00e9m
+you_can_not_select_organisation_units_below_the_selected_level=N\u00e3o \u00e9 poss\u00edvel selecionar unidades organizacionais abaixo do n\u00edvel selecionado
+you_do_not_have_access_to_all_items_in_this_favorite=Voc\u00ea n\u00e3o tem acesso a todos os itens neste favorito
 
