--- a/i18n/i18n_app_pt_BR.properties
+++ b/i18n/i18n_app_pt_BR.properties
@@ -1,26 +1,26 @@
 about=Acerca
 add_legend=Add legend
 add_new=Adicionar novo
-address=Endereço
+address=Endere\u00e7o
 add_to_dashboard=Adicionar ao painel de instrumentos
 aggregation_type=Aggregation type
 allow_external_access=Allow external access
 and_or_lower_than=And/or lower than
 attribution=Attribution
-automatic=Automático
-average=Média
+automatic=Autom\u00e1tico
+average=M\u00e9dia
 bimonthly=Bimensal
 boundary_layer=Camada limite
 by_data_element=By data element
 cancel=Cancelar
 can_edit_and_view=Consegue Editar e Visualizar
 can_view=Consegue ver
-chart=Gráfico
+chart=Gr\u00e1fico
 classes_method=Classes / method
 clear=Limpar
 clear_map=Clear map
 clustering=Clustering
-code=Código
+code=C\u00f3digo
 color_scale=Color scale
 coordinate_field=Coordinate field
 coordinates=Coordenadas
@@ -29,7 +29,7 @@ count=Contagem
 create=Criar
 created_by=Created by
 current_legends=Current legends
-daily=Diário
+daily=Di\u00e1rio
 data=Dados
 data_and_periods=Data and periods
 dataelement=Elemento de dado
@@ -49,7 +49,7 @@ elevation=Elevation
 edit_layer=Editar camadas
 edit_legend=Edit legend
 email=E-mail
-end_date=Data de término
+end_date=Data de t\u00e9rmino
 end_value_should_be_bigger_than_start_value=End value should be bigger than start value
 equal_counts=Equal counts
 equal_intervals=Intervalos iguais
@@ -80,7 +80,7 @@ group=Grupo
 group_nearby_events=Group nearby events
 groups=Grupos
 groupset=Conjunto do grupo
-has_no_orgunits=não tem unidades organizacional
+has_no_orgunits=n\u00e3o tem unidades organizacional
 high_color_size=High color / size
 highlight_color=Realce as cores
 high_size=High size
@@ -92,23 +92,23 @@ infrastructural_data=Dados de infra-estrutura
 invalid_parameter=Invalid parameter
 item_type=Item type
 landcover=Landcover
-last_2_sixmonths=Último 2 seis-meses
-last_3_months=Últimos 3 meses
-last_4_quarters=Últimos 4 trimestresÚltimo 4 trimestre
-last_4_weeks=Últimas 4 semanas
-last_5_financial_years=Últimos 5 anos financeiros
-last_6_bimonths=Últimos 6 bi-meses
-last_6_months=Últimos 6 meses
-last_12_months=Últimos 12 meses
-last_12_weeks=Últimoas 12 semanas
+last_2_sixmonths=\u00daltimo 2 seis-meses
+last_3_months=\u00daltimos 3 meses
+last_4_quarters=\u00daltimos 4 trimestres\u00daltimo 4 trimestre
+last_4_weeks=\u00daltimas 4 semanas
+last_5_financial_years=\u00daltimos 5 anos financeiros
+last_6_bimonths=\u00daltimos 6 bi-meses
+last_6_months=\u00daltimos 6 meses
+last_12_months=\u00daltimos 12 meses
+last_12_weeks=\u00daltimoas 12 semanas
 last_52_weeks=Last 52 weeks
 last_bimonth=Last bi-month
-last_financial_year=último ano financeiro
-last_month=Mês passado
-last_quarter=Último trimestre
-last_sixmonth=Últimos 6 meses
-last_week=Última semana
-last_5_years=Últimos 5 anos
+last_financial_year=\u00faltimo ano financeiro
+last_month=M\u00eas passado
+last_quarter=\u00daltimo trimestre
+last_sixmonth=\u00daltimos 6 meses
+last_week=\u00daltima semana
+last_5_years=\u00daltimos 5 anos
 last_year=Ano passado
 latitude=Latitude
 layer=Camada
@@ -123,22 +123,22 @@ legend_set_name=Legend set name
 legendsets=Legend sets
 legend_symbolizer=Symbolizer
 legend_type=Tipo de legenda
-level=Nível
+level=N\u00edvel
 longitude=Longitude
 low_color_size=Low color / size
 low_size=Low size
 manage_favorites=Gerir favoritos
 map=Mapa
-max=Máx
+max=M\u00e1x
 min=Min
-min_max_c=Min/max Â°C
+min_max_c=Min/max \u00c2\u00b0C
 min_max_elevation=Min/max elevation
 min_max_people=Min/max people
 min_max_rainfall=Min/max rainfall
 min_max_value=Min/max value
 monthly=Mensal
 name=Nome
-next=Próximo
+next=Pr\u00f3ximo
 nighttime_lights=Nighttime lights
 no=nenhum
 no_groupset_selected=No group set selected
@@ -157,7 +157,7 @@ open_last_table=Open last table
 openstreetmap=OpenStreetMap
 open_this_map_as_chart=Open this map as chart
 open_this_map_as_table=Open this map as table
-options=Opções
+options=Op\u00e7\u00f5es
 organisation_unit=Unidade organizacional
 organisation_unit_group_icons=Organisation unit group icons
 organisationunit_groupset=Conjunto de Grupo Unidade Organizacional
@@ -168,13 +168,13 @@ overwrite=Sobrescrever
 overwrite_favorite=Overwrite favorite
 page=Page
 parent_unit=Parent unit
-period=Período
-period_type=Tipo de período
-phone_number=Número de telefone
+period=Per\u00edodo
+period_type=Tipo de per\u00edodo
+phone_number=N\u00famero de telefone
 placement=Placement
 please_create_map_first=Please create a map first
 please_enter_a_name=Por favor, indique um nome
-please_enter_map_title=Digite um título do mapa
+please_enter_map_title=Digite um t\u00edtulo do mapa
 point_color=Point color
 point_radius=Point radius
 population_density=Population density
@@ -190,7 +190,7 @@ relocate=Realocar
 relocate_facility=Relocate facility
 remove=Remover
 rename=Renomear
-reporting_rates=Taxas de relatório
+reporting_rates=Taxas de relat\u00f3rio
 revision=Revision
 search=Pesquisar
 search_for_favorites=Search for favorites
@@ -205,7 +205,7 @@ select_levels=Select levels
 select_organisation_unit_groups=Select organisation unit groups
 select_organisation_unit_levels=Select organisation unit levels
 select_organisation_units=Select organisation units
-select_period=Seleccione o período
+select_period=Seleccione o per\u00edodo
 select_program=Seleccione Programa
 select_service=Select service
 select_stage=Select stage
@@ -214,15 +214,15 @@ select_year=Select year
 service_url=Service URL
 share=Partilhar
 share_with_other_people=Share with others
-sharing_settings=Definições de partilha
+sharing_settings=Defini\u00e7\u00f5es de partilha
 show=Mostrar
 show_circular_area=Show circular area with radius (m)
-show_information_sheet=Mostrar folha de informação
+show_information_sheet=Mostrar folha de informa\u00e7\u00e3o
 show_lon_lat=Show longitude/latitude
 sixmonthly=Semestral
 sixmonthly_april=Six-monthly April
 stage=Stage
-start_date=Data de início
+start_date=Data de in\u00edcio
 start_end_dates=Datas Iniciar-fim
 start_end_value=Start/end value
 stddev=Standard deviation
@@ -236,7 +236,7 @@ symbol_layer=Camada de US
 table=Table
 temperature=Temperature
 text_filter=Filtro do texto
-thematic_layer=Camada temática
+thematic_layer=Camada tem\u00e1tica
 thematic_layer_1_legend=Thematic layer 1 legend
 thematic_layer_2_legend=Thematic layer 2 legend
 thematic_layer_3_legend=Thematic layer 3 legend
@@ -261,7 +261,7 @@ user_sub_x2_units=User sub-x2-units
 value=Valor
 value_type=Tipo de valor
 variance=Variance
-version=Versão
+version=Vers\u00e3o
 weekly=Semanal
 weekly_wednesday=Weekly (Start Wednesday)
 weekly_thursday=Weekly (Start Thursday)
@@ -271,7 +271,7 @@ write_interpretation=Write interpretation
 write_your_interpretation=Write your interpretation
 yearly=Anual
 yes=Sim
-yesterday=Ontém
+yesterday=Ont\u00e9m
 you_can_not_select_organisation_units_below_the_selected_level=You cannot select organisation units below the selected level
 you_do_not_have_access_to_all_items_in_this_favorite=You do not have access to all items in this favorite
 
