00a74b5 chore(translations): sync translations from transifex (master)

--- a/i18n/i18n_app_zh_CN.properties
+++ b/i18n/i18n_app_zh_CN.properties
@@ -3,19 +3,19 @@ add_legend=Add legend
 add_new=\u65b0\u52a0
 address=Address
 add_to_dashboard=Add to dashboard
-aggregation_type=Aggregation type
+aggregation_type=\u6c47\u603b\u7c7b\u578b
 allow_external_access=Allow external access
 and_or_lower_than=And/or lower than
 attribution=Attribution
 automatic=\u81ea\u52a8
-average=Average
+average=\u5e73\u5747
 bimonthly=Bi-monthly
 boundary_layer=Boundary layer
-by_data_element=By data element
+by_data_element=\u6309\u6570\u636e\u5143
 cancel=\u53d6\u6d88
 can_edit_and_view=Can edit and view
 can_view=Can view
-chart=Chart
+chart=\u56fe\u8868
 classes_method=Classes / method
 clear=\u6e05\u9664
 clear_map=Clear map
@@ -25,12 +25,12 @@ color_scale=Color scale
 coordinate_field=Coordinate field
 coordinates=Coordinates
 coordinates_could_not_be_loaded=Coordinates could not be loaded
-count=Count
+count=\u8ba1\u6570
 create=\u521b\u5efa
 created_by=Created by
 current_legends=Current legends
 daily=\u6bcf\u5929
-data=Data
+data=\u6570\u636e
 data_and_periods=Data and periods
 dataelement=\u6570\u636e\u5143
 dataelement_group=Data element group
@@ -38,7 +38,7 @@ dataset=Data set
 delete=\u5220\u9664
 delete_favorite=Delete favorite
 details=\u8be6\u60c5
-download=Download
+download=\u4e0b\u8f7d
 download_map_as_png=Download map as PNG
 drill_down_one_level=Drill down one level
 drill_up_one_level=Drill up one level
@@ -78,38 +78,38 @@ go_to_pivot_tables=Go to pivot tables
 greater_than=\u5927\u4e8e
 group=Group
 group_nearby_events=Group nearby events
-groups=Groups
+groups=\u7ec4
 groupset=Group set
 has_no_orgunits=has no organisation units
 high_color_size=High color / size
 highlight_color=Highlight color
 high_size=High size
 home=\u9996\u9875
-indicator=Indicator
+indicator=\u6307\u6807
 indicator_group=Indicator group
 information=Information
 infrastructural_data=Infrastructural data
 invalid_parameter=Invalid parameter
 item_type=Item type
 landcover=Landcover
-last_2_sixmonths=Last 2 six-months
-last_3_months=Last 3 months
-last_4_quarters=Last 4 quarters
-last_4_weeks=Last 4 weeks
-last_5_financial_years=Last 5 financial years
+last_2_sixmonths=\u6700\u8fd1\u4e24\u4e2a\u534a\u5e74
+last_3_months=\u6700\u8fd13\u4e2a\u6708
+last_4_quarters=\u6700\u8fd1\u56db\u4e2a\u5b63\u5ea6
+last_4_weeks=\u6700\u8fd1\u56db\u5468
+last_5_financial_years=\u6700\u8fd1\u4e94\u4e2a\u8d22\u653f\u5e74
 last_6_bimonths=Last 6 bi-months
-last_6_months=Last 6 months
-last_12_months=Last 12 months
-last_12_weeks=Last 12 weeks
-last_52_weeks=Last 52 weeks
+last_6_months=\u6700\u8fd1\u516d\u4e2a\u6708<br>
+last_12_months=\u6700\u8fd112\u6708
+last_12_weeks=\u6700\u8fd112\u5468
+last_52_weeks=\u6700\u8fd152\u5468
 last_bimonth=Last bi-month
-last_financial_year=Last financial year
+last_financial_year=\u4e0a\u4e00\u8d22\u653f\u5e74
 last_month=\u4e0a\u6708
-last_quarter=Last quarter
-last_sixmonth=Last six-month
+last_quarter=\u6700\u8fd1\u4e00\u5b63
+last_sixmonth=\u6700\u8fd1\u516d\u4e2a\u6708
 last_week=\u4e0a\u5468
 last_5_years=\u6700\u8fd1\u4e94\u5e74
-last_year=Last year
+last_year=\u53bb\u5e74
 latitude=\u7ef4\u5ea6
 layer=Layer
 layers=Layers
@@ -122,15 +122,15 @@ legend_sets_available=legend sets available
 legend_set_name=Legend set name
 legendsets=Legend sets
 legend_symbolizer=Symbolizer
-legend_type=Legend type
+legend_type=\u56fe\u4f8b\u7c7b\u578b
 level=\u7b49\u7ea7
 longitude=\u7ecf\u5ea6
 low_color_size=Low color / size
 low_size=Low size
 manage_favorites=Manage favorites
-map=Map
+map=\u5730\u56fe
 max=\u6700\u5927
-min=Min
+min=\u6700\u5c0f
 min_max_c=Min/max \u00c2\u00b0C
 min_max_elevation=Min/max elevation
 min_max_people=Min/max people
@@ -147,7 +147,7 @@ none=\u6ca1\u6709
 no_event_coordinates_found=No event coordinates found
 no_organisation_unit_levels=No organisation unit levels
 no_organisation_units_specified=No organisation units specified
-no_period_selected=No period selected
+no_period_selected=\u6ca1\u6709\u9009\u62e9\u671f\u95f4
 no_program_stage_selected=No program stage selected
 no_selected_items=No selected items
 no_system_info_found=No system info found
@@ -157,7 +157,7 @@ open_last_table=Open last table
 openstreetmap=OpenStreetMap
 open_this_map_as_chart=Open this map as chart
 open_this_map_as_table=Open this map as table
-options=Options
+options=\u9009\u9879
 organisation_unit=\u673a\u6784
 organisation_unit_group_icons=Organisation unit group icons
 organisationunit_groupset=Organisation unit group set
@@ -225,12 +225,12 @@ stage=Stage
 start_date=\u5f00\u59cb\u65e5\u671f
 start_end_dates=Start/end dates
 start_end_value=Start/end value
-stddev=Standard deviation
-steps=Steps
+stddev=\u6807\u51c6\u5dee
+steps=\u6b65
 style=\u98ce\u683c
 sub_units=Sub-units
 sub_x2_units=Sub-x2-units
-sum=Sum
+sum=\u6c42\u548c
 swap_lon_lat=Swap longitude/latitude
 symbol_layer=Facility layer
 table=\u8868
@@ -242,12 +242,12 @@ thematic_layer_2_legend=Thematic layer 2 legend
 thematic_layer_3_legend=Thematic layer 3 legend
 thematic_layer_4_legend=Thematic layer 4 legend
 this_bimonth=\u672c\u4e24\u6708
-this_financial_year=This financial year
+this_financial_year=\u672c\u8d22\u653f\u5e74
 this_month=\u672c\u6708
 this_quarter=\u672c\u5b63
 this_sixmonth=\u672c\u534a\u5e74
 this_week=\u672c\u5468
-this_year=This year
+this_year=\u4eca\u5e74
 time_since_last_data_update=Elapsed time since last data update
 today=\u4eca\u5929
 totals=Totals
@@ -260,7 +260,7 @@ user_sub_units=User sub-units
 user_sub_x2_units=User sub-x2-units
 value=\u503c
 value_type=Value type
-variance=Variance
+variance=\u65b9\u5dee
 version=\u7248\u672c
 weekly=\u6bcf\u5468
 weekly_wednesday=Weekly (Start Wednesday)
