7c02285 chore(translations): sync translations from transifex (master)

--- a/i18n/i18n_app_nb.properties
+++ b/i18n/i18n_app_nb.properties
@@ -23,7 +23,7 @@ clustering=Clustering
 code=Kode
 color_scale=Color scale
 coordinate_field=Koordinatfelt
-coordinates=Coordinates
+coordinates=Koordinater
 coordinates_could_not_be_loaded=Coordinates could not be loaded
 count=Antall
 create=Opprett
@@ -162,7 +162,7 @@ organisation_unit=Organisasjonsenhet
 organisation_unit_group_icons=Organisation unit group icons
 organisationunit_groupset=Organisasjonsenhetgruppesett
 organisation_units=Organisasjonsenheter
-organisationunit_search=Organisation unit search
+organisationunit_search=Organisasjonsenhet s\u00f8k
 osm_light=OSM Light
 overwrite=Overskriv 
 overwrite_favorite=Overskriv favoritten
