9be9f32 chore(translations): sync translations from transifex (v29)

--- a/i18n/i18n_app_nb.properties
+++ b/i18n/i18n_app_nb.properties
@@ -6,7 +6,7 @@ add_to_dashboard=Add to dashboard
 aggregation_type=Aggregasjonstype
 allow_external_access=Tillat ekstern tilgang
 and_or_lower_than=And/or lower than
-attribution=Attribution
+attribution=Attributt
 automatic=Automatisk
 average=Gjennomsnitt
 bimonthly=To-m\u00e5nedlig
